--- a/microservices-app:/Jenkinsfile
+++ b/microservices-app:/Jenkinsfile
@@ -5,8 +5,7 @@ pipeline {
         stage('Build') {
             steps {
                 script {
-                    // Build Docker image for service1
-                    sh 'docker build -t bharu2003/devops:v1 .'  // Replace with your Docker Hub username
+                    sh 'docker build -t bharu2003/devops:v1 .'  
                 }
             }
         }
@@ -14,11 +13,9 @@ pipeline {
         stage('Push') {
             steps {
                 script {
-                    // Login to Docker Hub using credentials stored in Jenkins
                     withCredentials([string(credentialsId: 'dockerhub-credentials', variable: 'DOCKERHUB_PASS')]) {
-                        sh 'docker login -u bharu2003 -p $Bharu@2003' // Replace with your Docker Hub username
-                        // Push Docker image to Docker Hub
-                        sh 'docker push bharu2003/devops:v1' // Replace with your Docker Hub username
+                        sh 'docker login -u bharu2003 -p $Bharu@2003' 
+                        sh 'docker push bharu2003/devops:v1'
                     }
                 }
             }
@@ -27,7 +24,6 @@ pipeline {
         stage('Deploy') {
             steps {
                 script {
-                    // Apply Kubernetes configurations for deployment and service
                     sh 'kubectl apply -f k8s/service1-deployment.yaml'
                     sh 'kubectl apply -f k8s/service1-service.yaml'
                 }
@@ -38,7 +34,6 @@ pipeline {
     post {
         always {
             echo 'Cleaning up...'
-            // Optionally clean up Docker images or resources
             sh 'docker rmi bharu2003/devops:v1' 
         }
     }
